--- a/mise_en_sitaution_quizz/base/templates/classement/classement.html
+++ b/mise_en_sitaution_quizz/base/templates/classement/classement.html
@@ -23,14 +23,14 @@
 {% endblock title %}
 {% block content %}
 <div class="shadow-wrap">
- <div class="form-wrap">
-  <h3>Login </h3>
-<form method="POST">
- {% csrf_token %}
- {{form}}
- <button type="submit">TRUCMANCHIN</button>
-</form>
-<a class="signup-link" href="{% url "base:authView" %}">Signup</a>
-</div>
+    {% if allPlayer %}
+        <ul>
+        {% for joueur in allPlayer %}
+            <li> {{ joueur.score }}</li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>Aucun joueur !!!</p>
+    {% endif %}
 </div>
 {% endblock content %}a
