--- a/mise_en_sitaution_quizz/base/static/css/classement.css
+++ b/mise_en_sitaution_quizz/base/static/css/classement.css
@@ -6,23 +6,6 @@
     transition: 0.3s all ease-in-out;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-}
-
-.shadow-wrap {
-    width: 80%;
-    max-width: 1200px;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
-
 table {
     width: 100%;
     border-collapse: collapse;
@@ -33,18 +16,18 @@ table {
 
 th, td {
     padding: 20px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #aa1313;
     text-align: center;
 }
 
 th {
-    background-color: #f4f4f4;
+    background-color: #9f1717;
 }
 
 tr:nth-child(even) {
-    background-color: #f9f9f9;
+    background-color: #a31717;
 }
 
 tr:hover {
-    background-color: #f1f1f1;
+    background-color: #6b1313;
 }
