--- a/mise_en_sitaution_quizz/base/templates/home.html
+++ b/mise_en_sitaution_quizz/base/templates/home.html
@@ -12,20 +12,8 @@
  Quiz app
 {% endblock title %}
 {% block content %}
+    {% include "components/nav.html" %}
     <div class="container mt-3">
-
-        <div class="row w-100 p-2">
-            <div class="col-11"> 
-                <div class="alert alert-success">
-                    connected.
-                </div>
-            </div>
-            <div class="col-1 d-flex justify-content-start align-items-start p-0 m-0">
-                <form action="{% url 'base:logout' %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-success btn_logout">Logout</button>
-                </form>
-            </div>
-        </div>
+        
     </div>
 {% endblock content %}
