--- a/mise_en_sitaution_quizz/base/templates/quiz_list.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz_list.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+    {% include "components/nav.html" %}
     <div class="container mt-5">
         <h1>Quizzes</h1>
         <a href="{% url 'base:create_quiz' %}" class="btn btn-primary mb-3">Create New Quiz</a>
@@ -23,6 +24,7 @@
                         <td>{{ quiz.title }}</td>
                         <td>{{ quiz.description }}</td>
                         <td>
+                            <a href="{% url 'base:take_quiz' quiz.pk %}" class="btn btn-success">Take Quiz</a>
                             <a href="{% url 'base:quiz_detail' quiz.pk %}" class="btn btn-info">View</a>
                             <a href="{% url 'base:update_quiz' quiz.pk %}" class="btn btn-warning">Update</a>
                             <a href="{% url 'base:delete_quiz' quiz.pk %}" class="btn btn-danger">Delete</a>
