--- a/mise_en_sitaution_quizz/base/templates/update_quiz.html
+++ b/mise_en_sitaution_quizz/base/templates/update_quiz.html
@@ -8,174 +8,122 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        .add-icon, .remove-icon {
-            cursor: pointer;
-            color: blue;
-            margin-left: 10px;
-        }
-        .remove-icon {
-            color: red;
-        }
-
-        .question_container {
-            margin: 10px;
-            padding: 10px;
-            border-radius: 10px;
-            background-color: rgb(194, 248, 255);
-        }
-        .choices_container {
-            margin: 10px;
-            padding: 10px;
-            border-radius: 10px;
-            background-color: rgb(255, 194, 194);
-        }
-        .btn-success,
-        .btn-danger {
-            color: white;
-        }
+        .add-icon, .remove-icon { cursor: pointer; color: blue; margin-left: 10px; }
+        .remove-icon { color: red; }
+        .question_container, .choices_container { margin: 10px; padding: 10px; border-radius: 10px; }
+        .question_container { background-color: rgb(194, 248, 255); }
+        .choices_container { background-color: rgb(255, 194, 194); }
+        .btn-success, .btn-danger { color: white; }
     </style>
 </head>
 <body>
     <div class="container mt-5">
         <h1>Update Quiz</h1>
-        <form method="post">
-            {% csrf_token %}
+        <form id="quizForm">
             <div class="form-group">
-                {{ quiz_form.as_p }}
+                <p><input type="text" name="title" maxlength="200" class="form-control" placeholder="Enter the quiz title" required id="id_title"></p>
+                <p><textarea name="description" cols="40" rows="2" class="form-control" placeholder="Enter a description for the quiz" id="id_description"></textarea></p>
             </div>
             <div class="row">
-                <div class="col-6">
-                    <h2 class="text-left">
-                        Questions
-                    </h2>
-                </div>
-                <div class="col-6 text-right">
-                    <button type="button" id="add-question" class="btn btn-success add-icon">Add question</button>
-                </div>
+                <div class="col-6"><h2 class="text-left">Questions</h2></div>
+                <div class="col-6 text-right"><button type="button" id="add-question" class="btn btn-success add-icon" onclick="addQuestion()">Add question</button></div>
             </div>
-            <div id="questions">
-                {{ question_formset.management_form }}
-                {% for question_form in question_formset %}
-                    <div class="question-form mb-3 question_container">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-8">
-                                    {{ question_form.as_p }}
-                                </div>
-                                <div class="col-4">
-                                    <button type="button" class="btn btn-danger remove-icon remove-question">Remove question</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6">
-                                <h3 class="text-left">
-                                    Choices
-                                </h3>
-                            </div>
-                            <div class="col-6 text-right">
-                                <button type="button" class="btn btn-success add-icon add-choice">Add choice</button>
-                            </div>
-                        </div>
-                        <div class="choices">
-                            {{ choice_formset.management_form }}
-                            {% for choice_form in choice_formset %}
-                                <div class="choice-form choices_container mb-2">
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-8 d-flex">
-                                                {{ choice_form.as_p }}
-                                            </div>
-                                            <div class="col-4">
-                                                <button type="button" class="btn btn-danger remove-icon remove-choice">Remove choice</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+            <div id="questions"><!-- Questions will be dynamically added here --></div>
             <button type="submit" class="btn btn-primary">Update Quiz</button>
         </form>
     </div>
 
     <script>
-        $(document).ready(function () {
-            function updateElementIndex(el, prefix, ndx) {
-                var id_regex = new RegExp('(' + prefix + '-\\d+)', 'g');
-                var replacement = prefix + '-' + ndx;
-                $(el).find(':input, label').each(function () {
-                    var $this = $(this);
-                    if ($this.attr("for")) {
-                        $this.attr("for", $this.attr("for").replace(id_regex, replacement));
-                    }
-                    if (this.id) {
-                        this.id = this.id.replace(id_regex, replacement);
-                    }
-                    if (this.name) {
-                        this.name = this.name.replace(id_regex, replacement);
-                    }
+        var quizId = {{ quiz_id }};
+        console.log(quizId);
+        let questionIndex = 0;  // This will be updated dynamically
+    
+        function fetchQuizData(quizId) {
+            $.getJSON(`/get_quiz_json/${quizId}`, function(data) {
+                $('#id_title').val(data.title);
+                $('#id_description').val(data.description);
+                data.questions.forEach(function(question, qIndex) {
+                    addQuestion(qIndex, question.text, question.choices);
+                    questionIndex = Math.max(qIndex, questionIndex) + 1;  // Update questionIndex to be one more than the highest index
                 });
-            }
-
-            function cloneMore(selector, prefix) {
-                var newElement = $(selector).clone(true);
-                var total = $('#id_' + prefix + '-TOTAL_FORMS').val();
-                newElement.find(':input').each(function () {
-                    if ($(this).attr('name')) {
-                        var name = $(this).attr('name').replace('-' + (total - 1) + '-', '-' + total + '-');
-                        var id = 'id_' + name;
-                        $(this).attr({ 'name': name, 'id': id }).val('').removeAttr('checked');
-                    }
-                });
-                newElement.find('label').each(function () {
-                    var forValue = $(this).attr('for');
-                    if (forValue) {
-                        forValue = forValue.replace('-' + (total - 1) + '-', '-' + total + '-');
-                        $(this).attr({ 'for': forValue });
-                    }
-                });
-                total++;
-                $('#id_' + prefix + '-TOTAL_FORMS').val(total);
-                $(selector).after(newElement);
-            }
-
-            function updateIndexes() {
-                $('.question-form').each(function (index) {
-                    updateElementIndex(this, 'questions', index);
-                    $(this).find('.choice-form').each(function (sub_index) {
-                        updateElementIndex(this, 'choices', sub_index);
-                    });
-                });
-            }
-
-            $('#add-question').click(function () {
-                cloneMore('.question-form:last', 'questions');
-                updateIndexes();
             });
+        }
+    
+        function addQuestion(index, questionText = '', choices = []) {
+            let qIndex = typeof index === 'number' ? index : questionIndex++;  // Correctly handle index assignment
+            let questionHTML = `<div class="question-form mb-3 question_container" id="question-${qIndex}">
+                <div class="form-group"><div class="row"><div class="col-8"><p><input type="text" name="questions[${qIndex}][text]" value="${questionText}" maxlength="500" class="form-control" placeholder="Enter the question text"></p></div><div class="col-4"><button type="button" class="btn btn-danger remove-icon remove-question">Remove question</button></div></div></div><div class="row"><div class="col-6"><h3 class="text-left">Choices</h3></div><div class="col-6 text-right"><button type="button" class="btn btn-success add-icon add-choice">Add choice</button></div></div><div class="choices" id="choices-${qIndex}"></div></div>`;
+            $('#questions').append(questionHTML);
+            choices.forEach(choice => addChoice(qIndex, choice.text, choice.is_correct));
+        }
+    
+        $(document).on('click', '.remove-question', function() {
+            $(this).closest('.question-form').remove();
+        });
+    
+        $(document).on('click', '.add-choice', function() {
+            let questionId = $(this).closest('.question-form').attr('id').split('-')[1];
+            addChoice(questionId);
+        });
+    
+        function addChoice(questionId, choiceText = '', isCorrect = false) {
+            let choicesContainer = $(`#choices-${questionId}`);
+            let choiceCount = choicesContainer.children().length;
+            let checkedAttr = isCorrect ? ' checked' : '';
+            let choiceHTML = `<div class="choice-form choices_container mb-2"><div class="form-group"><div class="row"><div class="col-8"><p><input type="text" name="questions[${questionId}][choices][${choiceCount}][text]" value="${choiceText}" maxlength="200" class="form-control" placeholder="Enter the choice text"></p><p><label>Correct answer:</label><input type="checkbox" name="questions[${questionId}][choices][${choiceCount}][is_correct]" class="form-check-input"${checkedAttr}></p></div><div class="col-4"><button type="button" class="btn btn-danger remove-icon remove-choice">Remove choice</button></div></div></div></div>`;
+            choicesContainer.append(choiceHTML);
+        }
+    
+        $(document).on('click', '.remove-choice', function() {
+            $(this).closest('.choice-form').remove();
+        });
+    
+        $(document).ready(function() {
+            fetchQuizData(quizId);
 
-            $(document).on('click', '.add-choice', function () {
-                var questionForm = $(this).closest('.question-form');
-                cloneMore(questionForm.find('.choice-form:last'), 'choices');
-                updateIndexes();
-            });
-
-            $(document).on('click', '.remove-question', function () {
-                if ($('.question-form').length > 1) {
-                    $(this).closest('.question-form').remove();
-                    updateIndexes();
-                }
-            });
-
-            $(document).on('click', '.remove-choice', function () {
-                if ($(this).closest('.choices').find('.choice-form').length > 1) {
-                    $(this).closest('.choice-form').remove();
-                    updateIndexes();
-                }
+    
+            $('#quizForm').submit(function (event) {
+                event.preventDefault();  // Prevent the default form submission
+                let updatedQuizData = collectFormData();  // Collect form data
+                console.log(updatedQuizData);  // Logging data to be sent for debugging
+                $.ajax({
+                    type: "POST",
+                    url: `/update_quiz_form/${quizId}/`,  // Ensuring the URL ends with a slash
+                    data: JSON.stringify(updatedQuizData),
+                    contentType: "application/json",
+                    success: function (response) {
+                        console.log(response);
+                        alert('Quiz Updated Successfully!');
+                    },
+                    error: function (error) {
+                        console.error('Error:', error);
+                        alert('An error occurred: ' + error.responseText);
+                    }
+                });
             });
         });
+    
+        function collectFormData() {
+            let quizData = {
+                title: $('#id_title').val(),
+                description: $('#id_description').val(),
+                questions: []
+            };
+            $('.question-form').each(function () {
+                let question = {
+                    text: $(this).find('input[type="text"][name*="[text]"]').val(),
+                    choices: []
+                };
+                $(this).find('.choice-form').each(function () {
+                    question.choices.push({
+                        text: $(this).find('input[type="text"][name*="[text]"]').val(),
+                        is_correct: $(this).find('input[type="checkbox"]').is(':checked')
+                    });
+                });
+                quizData.questions.push(question);
+            });
+            return quizData;
+        }
     </script>
 </body>
 </html>
