--- a/mise_en_sitaution_quizz/base/templates/components/nav.html
+++ b/mise_en_sitaution_quizz/base/templates/components/nav.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="{% url 'base:home' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'base:quiz_list' %}" class="nav-link" >Quizzez</a>
+          <a href="{% url 'base:quiz_list' %}" class="nav-link" >quizzes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Classement</a>
