--- a/mise_en_sitaution_quizz/base/templates/components/nav.html
+++ b/mise_en_sitaution_quizz/base/templates/components/nav.html
@@ -14,7 +14,7 @@
           <a href="{% url 'base:quiz_list' %}" class="nav-link" >quizzes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Classement</a>
+          <a class="nav-link" href="{% url 'base:classement' %}">Classement</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
