--- a/mise_en_sitaution_quizz/base/static/css/quiz_detail.css
+++ b/mise_en_sitaution_quizz/base/static/css/quiz_detail.css
@@ -1,7 +1,3 @@
-.btn_logout {
-    padding: .75rem 1.25rem;
-    margin-bottom: 1rem;
-}
 /* Stylise le corps du document avec une hauteur minimale, une hauteur de 100% de la fenêtre d'affichage, sans marges et avec un dégradé radial comme arrière-plan. */
 body {
     min-height: 450px;
@@ -11,4 +7,6 @@ body {
     color: #fff;
     font-family: 'Open Sans', sans-serif;  
   }
-  
+.QuestionContainer {
+    background: linear-gradient(to bottom, #3a404d, #181c26);
+}
