--- a/mise_en_sitaution_quizz/base/static/css/quiz_list.css
+++ b/mise_en_sitaution_quizz/base/static/css/quiz_list.css
@@ -1,7 +1,3 @@
-.btn_logout {
-    padding: .75rem 1.25rem;
-    margin-bottom: 1rem;
-}
 /* Stylise le corps du document avec une hauteur minimale, une hauteur de 100% de la fenêtre d'affichage, sans marges et avec un dégradé radial comme arrière-plan. */
 body {
     min-height: 450px;
@@ -11,4 +7,13 @@ body {
     color: #fff;
     font-family: 'Open Sans', sans-serif;  
   }
-  
+table {
+  background: linear-gradient(to bottom, #3a404d, #181c26);
+}
+th,td {
+  color: #e1e1e1;
+}
+/* Centrage du texte pour tous les éléments h1. */
+h1 {
+  text-align: center;
+}
