--- a/mise_en_sitaution_quizz/base/templates/classement/classement.html
+++ b/mise_en_sitaution_quizz/base/templates/classement/classement.html
@@ -10,6 +10,7 @@
  Classement
 {% endblock title %}
 {% block content %}
+{% include "components/nav.html" %}
 <div class="container-fluid">
     <div class="leaderboard">
         <h1>
