--- a/mise_en_sitaution_quizz/base/templates/quiz/quiz_detail.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz/quiz_detail.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html>
+    {% load static %}
+    {% block style %}
+    
+    <link rel="stylesheet" href="{% static "css/quiz_detail.css" %}">
+    
+    {% endblock style %}
 <head>
     <title>Quiz Detail</title>
 </head>
 <body>
-    <h1>{{ object.title }}</h1>
-    <p>{{ object.description }}</p>
-    <h2>Questions:</h2>
-    <ul>
-        {% for question in object.questions.all %}
-            <li>{{ question.text }}
-                <ul>
-                    {% for choice in question.choices.all %}
-                        <li>{{ choice.text }} {% if choice.is_correct %}(Correct){% endif %}</li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {% endfor %}
-    </ul>
+    {% include "components/nav.html" %}
+    <div class ="QuestionContainer">
+        <h1>{{ object.title }}</h1>
+        <p>{{ object.description }}</p>
+        <h2>Questions:</h2>
+        <ul>
+            {% for question in object.questions.all %}
+                <li>{{ question.text }}
+                    <ul>
+                        {% for choice in question.choices.all %}
+                            <li>{{ choice.text }} {% if choice.is_correct %}(Correct){% endif %}</li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
