--- a/mise_en_sitaution_quizz/base/static/css/create_quiz.css
+++ b/mise_en_sitaution_quizz/base/static/css/create_quiz.css
@@ -17,7 +17,7 @@ body {
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
-    background-color: radial-gradient(ellipse farthest-corner at center top, #f2606f 0%, #c2e722 100%);
+    background: radial-gradient(ellipse farthest-corner at center top, #f2606f 0%, #d20b1f 100%);
     }
 .btn-success, .btn-danger {
      color: white; 
