--- a/mise_en_sitaution_quizz/base/static/css/update_quiz.css
+++ b/mise_en_sitaution_quizz/base/static/css/update_quiz.css
@@ -17,14 +17,11 @@ body {
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
-    background-color: radial-gradient(ellipse farthest-corner at center top, #f2606f 0%, #c2e722 100%);
+    background: radial-gradient(ellipse farthest-corner at center top, #f2606f 0%, #d20b1f 100%);
     }
 .btn-success, .btn-danger {
      color: white; 
     }
 input {
     margin-left: 10px;
-}
-.input-group {
-    background-color: #c2e722;
 }
