--- a/mise_en_sitaution_quizz/base/templates/quiz/create_quiz.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz/create_quiz.html
@@ -16,6 +16,7 @@
 
 {% endblock style %}
 <body>
+    {% include "components/nav.html" %}
     <div class="container mt-5">
         <h1>Create New Quiz</h1>
         <form method="post" id="quizForm">
