--- a/mise_en_sitaution_quizz/base/templates/quiz/update_quiz.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz/update_quiz.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+    {% include "components/nav.html" %}
     <div class="container mt-5">
         <h1>Update Quiz</h1>
         <form id="quizForm">
