--- a/mise_en_sitaution_quizz/base/templates/classement/classement.html
+++ b/mise_en_sitaution_quizz/base/templates/classement/classement.html
@@ -2,7 +2,12 @@
 {% load static %}
 {% block style %}
 
-<link rel="stylesheet" href="{% static "css/classement.css" %}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="{% static "css/classement.css" %}">
 
 {% endblock style %}
 
