--- a/mise_en_sitaution_quizz/base/templates/quiz/quiz_detail.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz/quiz_detail.html
@@ -2,8 +2,12 @@
 <html>
     {% load static %}
     {% block style %}
-    
-    <link rel="stylesheet" href="{% static "css/quiz_detail.css" %}">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <!-- Font Awesome CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <link rel="stylesheet" href="{% static "css/quiz_detail.css" %}">
     
     {% endblock style %}
 <head>
