--- a/mise_en_sitaution_quizz/base/templates/quiz/create_quiz.html
+++ b/mise_en_sitaution_quizz/base/templates/quiz/create_quiz.html
@@ -16,28 +16,23 @@
 
 {% endblock style %}
 <body>
-    {% include "components/nav.html" %}
     <div class="container mt-5">
         <h1>Create New Quiz</h1>
         <form method="post" id="quizForm">
             <div class="form-group">
-                <p>
-                    <input type="text" name="title" maxlength="200"
-                           class="form-control" placeholder="Enter the quiz title" required
-                           id="id_title">
-                </p>
-                <p>
-                    <textarea name="description" cols="40" rows="2"
-                              class="form-control" placeholder="Enter a description for the quiz"
-                              id="id_description"></textarea>
-                </p>
+                <input type="text" name="title" maxlength="200"
+                       class="form-control" placeholder="Enter the quiz title" required
+                       id="id_title">
+                <textarea name="description" cols="40" rows="2"
+                          class="form-control" placeholder="Enter a description for the quiz"
+                          id="id_description"></textarea>
             </div>
             <div class="row">
                 <div class="col-6">
                     <h2 class="text-left">Questions</h2>
                 </div>
                 <div class="col-6 text-right">
-                    <button type="button" id="add-question" onclick="addQuestion()" class="btn btn-success add-icon" >Add question</button>
+                    <button type="button" id="add-question" onclick="addQuestion()" class="btn btn-success add-icon">Add question</button>
                 </div>
             </div>
             <div id="questions">
@@ -45,9 +40,7 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col-8">
-                                <p>
-                                    <input type="text" name="questions[0][text]" maxlength="500" class="form-control" placeholder="Enter the question text">
-                                </p>
+                                <input type="text" name="questions[0][text]" maxlength="500" class="form-control" placeholder="Enter the question text">
                             </div>
                             <div class="col-4">
                                 <button type="button" class="btn btn-danger remove-icon remove-question" onclick="removeQuestion(0)">Remove question</button>
@@ -66,16 +59,18 @@
                         <div class="choice-form choices_container mb-2" id="choice-0-0">
                             <div class="form-group">
                                 <div class="row">
-                                    <div class="col-8">
-                                        <p>
+                                    <div class="col-10">
+                                        <div class="input-group">
                                             <input type="text" name="questions[0][choices][0][text]" maxlength="200" class="form-control" placeholder="Enter the choice text">
-                                        </p>
-                                        <p>
-                                            <label for="id_questions_0_choices_0_is_correct">Correct answer:</label>
-                                            <input type="checkbox" name="questions[0][choices][0][is_correct]" class="form-check-input" id="id_questions_0_choices_0_is_correct">
-                                        </p>
+                                            <div class="input-group-append">
+                                                <div class="input-group-text">
+                                                    <input type="checkbox" name="questions[0][choices][0][is_correct]" class="form-check-input" id="id_questions_0_choices_0_is_correct">
+                                                    <label class="form-check-label" for="id_questions_0_choices_0_is_correct">Correct:</label>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-2">
                                         <button type="button" class="btn btn-danger remove-icon remove-choice" onclick="removeChoice(0, 0)">Remove choice</button>
                                     </div>
                                 </div>
@@ -84,16 +79,18 @@
                         <div class="choice-form choices_container mb-2" id="choice-0-1">
                             <div class="form-group">
                                 <div class="row">
-                                    <div class="col-8">
-                                        <p>
+                                    <div class="col-10">
+                                        <div class="input-group">
                                             <input type="text" name="questions[0][choices][1][text]" maxlength="200" class="form-control" placeholder="Enter the choice text">
-                                        </p>
-                                        <p>
-                                            <label for="id_questions_0_choices_1_is_correct">Correct answer:</label>
-                                            <input type="checkbox" name="questions[0][choices][1][is_correct]" class="form-check-input" id="id_questions_0_choices_1_is_correct">
-                                        </p>
+                                            <div class="input-group-append">
+                                                <div class="input-group-text">
+                                                    <input type="checkbox" name="questions[0][choices][1][is_correct]" class="form-check-input" id="id_questions_0_choices_1_is_correct">
+                                                    <label class="form-check-label" for="id_questions_0_choices_1_is_correct">Correct:</label>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-2">
                                         <button type="button" class="btn btn-danger remove-icon remove-choice" onclick="removeChoice(0, 1)">Remove choice</button>
                                     </div>
                                 </div>
@@ -102,13 +99,12 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary" >Create Quiz</button>
+            <button type="submit" class="btn btn-primary">Create Quiz</button>
         </form>
         <!-- Placeholder pour le message flash -->
         <div id="flashMessage" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 1000; background-color: #f8d7da; color: #721c24; padding: 10px; border-radius: 5px; border: 1px solid #f5c6cb;">
             <!-- Le message sera injecté ici -->
         </div>
-
     </div>
 
     <script>
@@ -120,9 +116,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-8">
-                            <p>
-                                <input type="text" name="questions[${qIndex}][text]" maxlength="500" class="form-control" placeholder="Enter the question text">
-                            </p>
+                            <input type="text" name="questions[${qIndex}][text]" maxlength="500" class="form-control" placeholder="Enter the question text">
                         </div>
                         <div class="col-4">
                             <button type="button" class="btn btn-danger remove-icon remove-question" onclick="removeQuestion(${qIndex})">Remove question</button>
@@ -138,7 +132,47 @@
                     </div>
                 </div>
                 <div class="choices" id="choices-${qIndex}">
-                    <!-- Choices will be added here -->
+                    <!-- Initial two choices -->
+                    <div class="choice-form choices_container mb-2" id="choice-${qIndex}-0">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-10">
+                                    <div class="input-group">
+                                        <input type="text" name="questions[${qIndex}][choices][0][text]" maxlength="200" class="form-control" placeholder="Enter the choice text">
+                                        <div class="input-group-append">
+                                            <div class="input-group-text">
+                                                <input type="checkbox" name="questions[${qIndex}][choices][0][is_correct]" class="form-check-input" id="id_questions_${qIndex}_choices_0_is_correct">
+                                                <label class="form-check-label" for="id_questions_${qIndex}_choices_0_is_correct">Correct:</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <button type="button" class="btn btn-danger remove-icon remove-choice" onclick="removeChoice(${qIndex}, 0)">Remove choice</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="choice-form choices_container mb-2" id="choice-${qIndex}-1">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-10">
+                                    <div class="input-group">
+                                        <input type="text" name="questions[${qIndex}][choices][1][text]" maxlength="200" class="form-control" placeholder="Enter the choice text">
+                                        <div class="input-group-append">
+                                            <div class="input-group-text">
+                                                <input type="checkbox" name="questions[${qIndex}][choices][1][is_correct]" class="form-check-input" id="id_questions_${qIndex}_choices_1_is_correct">
+                                                <label class="form-check-label" for="id_questions_${qIndex}_choices_1_is_correct">Correct:</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <button type="button" class="btn btn-danger remove-icon remove-choice" onclick="removeChoice(${qIndex}, 1)">Remove choice</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>`;
             $('#questions').append(questionHTML);
@@ -152,20 +186,18 @@
                 let choiceHTML = `<div class="choice-form choices_container mb-2" id="choice-${questionId}-${choiceCount}">
                     <div class="form-group">
                         <div class="row">
-                            <div class="col-8">
-                                <p>
+                            <div class="col-10">
+                                <div class="input-group">
                                     <input type="text" name="questions[${questionId}][choices][${choiceCount}][text]" maxlength="200" class="form-control" placeholder="Enter the choice text">
-                                </p>
-                                <p>
                                     <div class="input-group-append">
-                                        <div class="input-group-text">        
-                                        <input type="checkbox" name="questions[${questionId}][choices][${choiceCount}][is_correct]" class="form-check-input" id="id_questions_${questionId}_choices_${choiceCount}_is_correct">
-                                        <label for="id_questions_${questionId}_choices_${choiceCount}_is_correct">Correct:</label>
+                                        <div class="input-group-text">
+                                            <input type="checkbox" name="questions[${questionId}][choices][${choiceCount}][is_correct]" class="form-check-input" id="id_questions_${questionId}_choices_${choiceCount}_is_correct">
+                                            <label class="form-check-label" for="id_questions_${questionId}_choices_${choiceCount}_is_correct">Correct:</label>
                                         </div>
                                     </div>
-                                </p>
+                                </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-2">
                                 <button type="button" class="btn btn-danger remove-icon remove-choice" onclick="removeChoice(${questionId}, ${choiceCount})">Remove choice</button>
                             </div>
                         </div>
@@ -211,19 +243,19 @@
     
             $.ajax({
                 type: "POST",
-                url: '/save_quiz/',  // Ajustez cela à votre URL Django
+                url: '/save_quiz/',  // Adjust this to your Django URL
                 data: JSON.stringify(quizData),
                 contentType: "application/json",
                 dataType: 'json',
                 success: function (response) {
                     console.log(response);
-                    // Affiche le message flash
+                    // Display the flash message
                     $('#flashMessage').text('Quiz saved successfully! Redirecting...').show();
                     
-                    // Redirection après 5 secondes
+                    // Redirect after 5 seconds
                     setTimeout(function() {
-                        window.location.href = "{% url 'base:quiz_list' %}";  // Ajustez selon votre URL
-                    }, 1000);  // 5000 ms = 5 secondes
+                        window.location.href = "{% url 'base:quiz_list' %}";  // Adjust according to your URL
+                    }, 1000);  // 5000 ms = 5 seconds
                 },
                 error: function (error) {
                     console.error('Error:', error);
@@ -231,8 +263,6 @@
                 }
             });
         });
-        
-        
     </script>
 </body>
 </html>
